--- a/aprende_ms_sobre_los_componentes_de_una_red_informtica_explorar.html
+++ b/aprende_ms_sobre_los_componentes_de_una_red_informtica_explorar.html
@@ -26,7 +26,7 @@
    <li><a href="diseando_la_red_del_mundial_cmo_funciona_la_tecnologa_detrs_del_ftbol_motivar.html" class="no-ch">Diseñando la Red del Mundial: ¿Cómo funciona la tecnología detrás del fútbol? (Motivar)</a></li>
    <li><a href="redes_informticas_lo_que_ya_sabes_activar.html" class="no-ch">Redes Informáticas: Lo que ya sabes (Activar)</a></li>
    <li id="active"><a href="aprende_ms_sobre_los_componentes_de_una_red_informtica_explorar.html" class="active no-ch">Aprende más sobre los componentes de una red informática (Explorar)</a></li>
-   <li><a href="disea_tu_red_informtica_para_el_mundial_aplicar.html" class="no-ch">Diseña tu red informática para el Mundial (Aplicar)</a></li>
+   <li><a href="disea_tu_red_informtica_para_el_mundial_estructurar.html" class="no-ch">Diseña tu red informática para el Mundial (Estructurar)</a></li>
    <li><a href="hazlo_realidad_aplicar.html" class="no-ch">Hazlo realidad (Aplicar)</a></li>
    <li><a href="reflexiona_sobre_lo_aprendido_concluir.html" class="no-ch">Reflexiona sobre lo aprendido (Concluir)</a></li>
    <li><a href="gua_didctica_evaluacin_y_atencina_la_diversidad.html" class="no-ch">Guía didáctica, evaluación y atencióna la diversidad</a></li>
@@ -35,7 +35,7 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="redes_informticas_lo_que_ya_sabes_activar.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="disea_tu_red_informtica_para_el_mundial_aplicar.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="redes_informticas_lo_que_ya_sabes_activar.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="disea_tu_red_informtica_para_el_mundial_estructurar.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -145,7 +145,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="redes_informticas_lo_que_ya_sabes_activar.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="disea_tu_red_informtica_para_el_mundial_aplicar.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="redes_informticas_lo_que_ya_sabes_activar.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="disea_tu_red_informtica_para_el_mundial_estructurar.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
